<resources>
    <string name="app_name">AplicativoEstresse</string>
    <string name="pessimo">péssimo</string>
    <string name="triste">triste</string>
    <string name="ok">ok</string>
    <string name="feliz">feliz</string>
    <string name="otimo">ótimo</string>
    <string name="tv2">Como está seu humor hoje?</string>
    <string name="tv3">O que você está sentindo?</string>
    <string name="tv1">PÉSSIMO</string>
    <string name="title_activity_tela2">Tela2</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"
    </string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_modulo__respiracao">Modulo_Respiracao</string>
</resources>
