<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gabrielhideki.aplicativoestresse.MainActivity"
    android:background="@color/material_deep_teal_500">

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv1"
        android:id="@+id/textView"
        android:layout_marginTop="34dp"
        android:textColor="#ffffff"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icone_bad"
        android:src="@mipmap/muitomal"
        android:contentDescription="@string/pessimo"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/seekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icone_sad"
        android:src="@mipmap/mal"
        android:contentDescription="@string/triste"
        android:layout_alignTop="@+id/icone_bad"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icone_ok"
        android:src="@mipmap/okay"
        android:contentDescription="@string/ok"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icone_happy"
        android:src="@mipmap/bem"
        android:contentDescription="@string/feliz"
        android:layout_above="@+id/textView3"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/icone_great"
        android:src="@mipmap/muitobem"
        android:contentDescription="@string/otimo"
        android:layout_alignTop="@+id/icone_happy"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv2"
        android:id="@+id/textView2"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tv3"
        android:id="@+id/textView3"
        android:textColor="#ffffff"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/icone_sad"
        android:layout_centerHorizontal="true"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/textView3">
    </ListView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Salvar"
        android:id="@+id/button"
        android:layout_below="@+id/listView1"
        android:layout_marginTop="26dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
